# musical-rater

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Justfile  README.md  docker-compose.yaml  falhas-de-llm.md  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: pre-commit.yaml
backend/: pyproject.toml
backend/accounts/: admin.py  api.py  models.py  moderation_api.py  services.py  signals.py  tests.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_date_joined.py
backend/catalog/: admin.py  api.py  models.py  providers.py  services.py  tests.py
backend/catalog/migrations/: 0001_initial.py  0002_rating.py  0003_favorite.py  0003_rating_review.py  0004_favorite.py  0005_savedalbum.py  0006_ratingcomment.py  0007_albumrating.py
backend/config/: middleware.py  settings.py  tests.py  urls.py
backend/core/: api.py
backend/scripts/: coverage.sh
backend/social/: admin.py  api.py  models.py  notifications.py  tests.py
backend/social/migrations/: 0001_initial.py  0002_notification.py  0003_remove_notification_social_notif_recipient_created_and_more.py
docs/: database-schema.md
frontend/: cypress.config.js  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml
frontend/cypress/e2e/: auth.cy.js  edicao_perfil.cy.js  search_rating.cy.js  traducao.cy.js
frontend/cypress/support/: e2e.js
frontend/src/: App.css  App.tsx  i18n.ts  index.css  main.tsx
frontend/src/auth/: AuthContext.ts  AuthContext.tsx  AuthProvider.tsx  RouteGuards.tsx  authErrors.ts  useAuth.ts
(+22 files in other folders)
