[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "django-ninja>=1.6.2",
    "psycopg>=3.3.3",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "coverage[toml]>=7.13.0",
]

[tool.coverage.run]
branch = true
source = [
    "accounts",
    "catalog",
    "social",
    "config",
    "core",
]
omit = [
    "*/admin.py",
    "*/migrations/*",
    "*/tests.py",
    "config/asgi.py",
    "config/wsgi.py",
    "manage.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
